--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -4,3 +4,98 @@
   margin: 0;
   padding: 0;
 }
+
+.responsive-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.search-container {
+  display: flex;
+  align-items: center;
+  border-radius: 8px;
+  background: #2f2f43;
+  width: 90%;
+  min-width: 312px;
+  max-width: 480px;
+  height: 48px;
+  flex-shrink: 0;
+  box-shadow: 0px 15px 25px 0px rgba(0, 0, 0, 0.06);
+  margin-top: 24px;
+  padding: 14px 16px;
+}
+
+.search-input {
+  background-color: transparent;
+  color: var(--light-blue-gray-400, #94a3b8);
+  font-family: Roboto;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 16px; /* 133.333% */
+  border: none;
+  outline: none;
+  margin-left: 8px;
+  width: 80%;
+}
+
+.loader-dots {
+  display: flex;
+  align-items: center;
+  height: 70vh;
+}
+
+.country-stats {
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  margin-top: 48px;
+  width: 75%;
+}
+
+.stats-block {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 10px;
+  margin-right: 40px;
+}
+
+.stats-title {
+  text-align: center;
+  font-family: Roboto;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 16px; /* 133.333% */
+}
+
+.stats-icon {
+  width: 24px;
+  height: 24px;
+  flex-shrink: 0;
+  margin: 16px 0px;
+}
+
+.stats-count {
+  text-align: center;
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px; /* 150% */
+}
+
+.red {
+  color: #ff073a;
+}
+.blue {
+  color: #007bff;
+}
+.green {
+  color: #28a745;
+}
+.gray {
+  color: #6c757d;
+}
