--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -51,6 +51,7 @@
   justify-content: space-evenly;
   flex-wrap: wrap;
   margin-top: 48px;
+  margin-bottom: 48px;
   width: 75%;
 }
 
@@ -98,4 +99,106 @@
 }
 .gray {
   color: #6c757d;
+}
+
+.states-table {
+  width: 80%;
+  min-width: 1126px;
+  height: 2080px;
+  flex-shrink: 0;
+  border-radius: 12px;
+  border: 1px solid var(--light-blue-gray-600, #475569);
+  background: #1e1e30;
+  box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.16);
+  margin-bottom: 48px;
+  align-self: flex-start;
+  margin-left: 48px;
+}
+
+@media screen and (min-width: 992px) {
+  .states-table {
+    align-self: center;
+    max-width: 1148px;
+    margin-left: 0;
+  }
+}
+
+.table-header {
+  display: flex;
+  align-items: center;
+  padding: 1px 5px 1px 25px;
+}
+
+.sorting-container {
+  display: flex;
+  align-items: center;
+}
+
+.table-title {
+  color: var(--light-blue-gray-50, #f8fafc);
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 24px; /* 150% */
+}
+
+.sorting-btn {
+  background-color: transparent;
+  outline: none;
+  border: none;
+  cursor: pointer;
+  margin-left: 8px;
+}
+
+.sorting-icon {
+  width: 20px;
+  height: 20px;
+  flex-shrink: 0;
+  color: var(--light-blue-gray-400, #94a3b8);
+}
+
+.line {
+  /* width: 100%;
+  height: 1px; */
+  /* border: 1px solid #475569; */
+  border: 1px solid var(--light-blue-gray-600, #475569);
+  margin: 0;
+}
+
+.table-headings {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 80%;
+  margin-left: 50px;
+}
+
+.states-list {
+  list-style-type: none;
+  width: 100%;
+  padding-left: 15px;
+  padding-right: 8px;
+}
+
+.list-item {
+  display: flex;
+  align-items: center;
+}
+
+.state-name {
+  width: 20%;
+  color: var(--light-blue-gray-100, #f1f5f9);
+  font-family: Roboto;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px; /* 171.429% */
+}
+
+.numbers-container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 80%;
 }
