--- a/src/components/Footer/index.css
+++ b/src/components/Footer/index.css
@@ -9,12 +9,20 @@
   color: var(--light-blue-gray-50, #f8fafc);
   text-align: center;
   font-family: 'Bree Serif';
-  font-size: 24px;
+  font-size: 20px;
   font-style: normal;
   font-weight: 400;
   line-height: 32px; /* 133.333% */
   margin-bottom: 0;
+  margin-top: 48px;
 }
+
+@media screen and (min-width: 768px) {
+  .footer-logo {
+    font-size: 24px;
+  }
+}
+
 .footer-india {
   color: #3b82f6;
 }
@@ -23,19 +31,40 @@
   color: var(--light-blue-gray-400, #94a3b8);
   text-align: center;
   font-family: 'Roboto';
-  font-size: 16px;
+  font-size: 14px;
   font-style: normal;
   font-weight: 400;
   line-height: 24px; /* 150% */
-  margin: 24px 1px;
+  margin: 16px 1px;
+}
+
+@media screen and (min-width: 768px) {
+  .footer-tagline {
+    font-size: 16px;
+    margin: 24px 1px;
+  }
 }
 
 .footer-icon {
+  font-family: 'Font Awesome 5 Brands';
   font-style: normal;
   font-weight: 400;
-  font-size: 52.9233px;
+  font-size: 26.028px;
   line-height: 61px;
   text-align: center;
   color: #cbd5e1;
-  margin: 0px 32px;
+  margin: 0px 12px;
+  width: 24px;
+  height: 20px;
+  flex-shrink: 0;
+}
+
+@media screen and (min-width: 768px) {
+  .footer-icon {
+    font-size: 52.9233px;
+    margin: 0px 16px;
+    width: 47px;
+    height: 61px;
+    flex-shrink: 0;
+  }
 }
