--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -17,13 +17,20 @@
   border-radius: 8px;
   background: #2f2f43;
   width: 90%;
-  min-width: 312px;
+  min-width: 280px;
   max-width: 480px;
   height: 48px;
   flex-shrink: 0;
   box-shadow: 0px 15px 25px 0px rgba(0, 0, 0, 0.06);
   margin-top: 24px;
   padding: 14px 16px;
+}
+
+@media screen and (min-width: 992px) {
+  .search-container {
+    width: 80%;
+    max-width: 560px;
+  }
 }
 
 .search-input {
@@ -101,23 +108,53 @@
   color: #6c757d;
 }
 
+.table-container {
+  width: 90%;
+  align-self: center;
+  /* margin-left: 48px; */
+  overflow: auto;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+@media screen and (min-width: 1148px) {
+  .table-container {
+    align-items: center;
+    justify-content: center;
+  }
+}
+
+::-webkit-scrollbar {
+  width: 12px;
+  height: 4px;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 12px;
+  background: #9ea0a4;
+  width: 53px;
+  height: 4px;
+  flex-shrink: 0;
+}
+
 .states-table {
-  width: 80%;
   min-width: 1126px;
-  height: 2080px;
+  /* height: 2080px; */
   flex-shrink: 0;
   border-radius: 12px;
   border: 1px solid var(--light-blue-gray-600, #475569);
   background: #1e1e30;
   box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.16);
-  margin-bottom: 48px;
-  align-self: flex-start;
-  margin-left: 48px;
+  margin-bottom: 12px;
 }
 
 @media screen and (min-width: 992px) {
   .states-table {
-    align-self: center;
     max-width: 1148px;
     margin-left: 0;
   }
@@ -201,4 +238,14 @@
   justify-content: space-around;
   align-items: center;
   width: 80%;
+}
+
+.search-result-container {
+  display: flex;
+  flex-direction: column;
+  list-style-type: none;
+  /* margin: 0; */
+  padding: 0;
+  width: 80%;
+  max-width: 560px;
 }
