--- a/src/components/About/index.css
+++ b/src/components/About/index.css
@@ -74,7 +74,7 @@
   padding-left: 0px;
 }
 
-.about-loader-container {
+.loader-container {
   display: flex;
   justify-content: center;
   align-items: center;
